--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </a>
                 </div>
                 <div class="modalidad-card" style="background-image: url('img/diseñoindustrial.jpg');">
-                    <a href="DiseñoIndustrial.html" class="overlay">
+                    <a href="Diseñoindustrial.html" class="overlay">
                         <h2>Diseño Industrial</h2>
                     </a>
                 </div>
@@ -76,7 +76,7 @@
                     </a>
                 </div>
                 <div class="modalidad-card" style="background-image: url('img/quimica.jpg');">
-                    <a href="QuimicaIndustrial.html" class="overlay">
+                    <a href="Quimicaindustrial.html" class="overlay">
                         <h2>Química Industrial</h2>
                     </a>
                 </div>
